# shoot-out-your-life

./: Cargo.toml  README.md
src/: assets.rs  main.rs  utils.rs
src/scenes/: game.rs  manager.rs  mod.rs  title.rs
