[package]
name = "clone-shoot"
version = "0.1.0"
authors = ["nahuakang <kangnahua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.5"           # Game framework
lazy_static = "1.4.0"   # Error display